[package]
edition = "2021"
name    = "squish"
version = "0.1.0"

[[bin]]
name = "squish"
path = "src/bin/main.rs"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13.1", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.13.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "esp-alloc",
  "esp32c6",
  "log",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
log = "0.4.27"
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
